gcc/testsuite/gdc.test/fail_compilation/fail6458.d
/*
TEST_OUTPUT:
---
fail_compilation/fail6458.d(10): Error: Invalid trailing code unit
---
*/

void main()
{
    char d = 'ä';
}
